@@ -1,3 +1,8 @@
+2005-10-05  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* sak.tcl: Added support for passing parameters to critcl. v04
+	will support -debug and -clean and v034 supports -keep.
+
 2005-09-29  Andreas Kupries <andreask@activestate.com>
 
 	* README-1.8.txt: New file. Readme file for the upcoming release.
